--- a/FirstProject/css/styles.css
+++ b/FirstProject/css/styles.css
@@ -1,13 +1,17 @@
 :root {
     --blanco: #ffffff;
     --negro: #212121;
-    --primario: #FFC107; 
-    --secundario: #884DFF; 
+    --primario: #FFC107;
+    --secundario: #533099;
     --gris: #757575;
 }
 
 html {
     font-size: 62.5%;
+     box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
@@ -19,30 +23,70 @@ body {
 .titulo {
     text-align: center;
     font-size: 3.8rem;
-    font-size: 700;
+    font-size: bold;
 }
 
 .titulo span {
     font-size: 2rem;
 }
 
-.contenedor{
-    width: 120rem;
+.contenedor {
+    max-width: 120rem;
     margin: 0 auto;
 }
 
 /* Barra de Navegación */
-.nav-background{
+.nav-background {
     background-color: var(--secundario);
 }
 
-.navegacion-principal{
-    padding: 1rem;
+.navegacion-principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-.navegacion-principal a{
+
+.navegacion-principal a {
     color: var(--blanco);
     text-decoration: none;
+    font-size: 2rem;
+    font-weight: bold;
+    padding: 1rem;
 }
-.navegacion-principal a:hover{
+
+.navegacion-principal a:hover {
     background-color: var(--primario);
+    color: var(--negro);
+}
+
+@media (min-width: 480px) {
+    /*Celular*/
+}
+
+@media (min-width: 768px) {
+
+    /* Tablets */
+    .navegacion-principal {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+@media (min-width: 1140px) {}
+
+@media (min-width: 1440px) {}
+
+.picture {
+    background-image: url(../img/hero.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 450px;
+    position: relative;
+}
+
+.picture-container {
+   position: absolute;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.5); 
 }
