--- a/FirstProject/css/styles.css
+++ b/FirstProject/css/styles.css
@@ -1,33 +1,50 @@
 :root {
     --blanco: #ffffff;
     --negro: #212121;
-    --primario: #FFC107;
-    --secundario: #533099;
+    --primario: #9c7501;
+    --primarioG: #FFC107;
+    --secundario: #210d47;
+    --secundarioG: #5228a5;
     --gris: #757575;
 }
 
+
+/* Globales */
 html {
     font-size: 62.5%;
-     box-sizing: border-box;
+    box-sizing: border-box;
+    /* Box Model Truco B) */
 }
-*, *:before, *:after {
-  box-sizing: inherit;
+
+*,
+*:before,
+*:after {
+    box-sizing: inherit;
 }
 
 body {
     /* 1rem = 10px */
     font-size: 16px;
     font-family: "Krub", sans-serif;
+    background-image: linear-gradient(to top, #DFE9F3 0%, var(--blanco) 100%);
 }
 
-.titulo {
-    text-align: center;
+h1 {
     font-size: 3.8rem;
-    font-size: bold;
 }
 
-.titulo span {
-    font-size: 2rem;
+h2 {
+    font-size: 2.8rem;
+}
+
+h3 {
+    font-size: 1.8rem;
+}
+
+h1,
+h2,
+h3 {
+    text-align: center;
 }
 
 .contenedor {
@@ -35,9 +52,40 @@ body {
     margin: 0 auto;
 }
 
+.sombra {
+    -webkit-box-shadow: 0px 5px 15px 0px rgba(82, 82, 82, 0.55);
+    -moz-box-shadow: 0px 5px 15px 0px rgba(82, 82, 82, 0.55);
+    box-shadow: 0px 5px 15px 0px rgba(82, 82, 82, 0.55);
+    background-color: var(--blanco);
+    border-radius: 1rem;
+}
+
+.contactar-boton {
+    font-family: "Krub", sans-serif;
+    font-size: 2rem;
+    background-image: linear-gradient(to right, var(--secundarioG), var(--secundarioG), var(--secundarioG));
+    color: var(--blanco);
+    padding: 1rem 3rem;
+    border-radius: .5rem;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-weight: bold;
+    width: 90%;
+    text-align: center;
+}
+
+.contactar-boton:hover {
+    background-image: linear-gradient(to right, var(--primario), var(--primarioG), var(--primario));
+    color: var(--negro);
+}
+
+.titulo span {
+    font-size: 2rem;
+}
+
 /* Barra de Navegación */
 .nav-background {
-    background-color: var(--secundario);
+    background-image: linear-gradient(to right, var(--secundario), var(--secundarioG), var(--secundario));
 }
 
 .navegacion-principal {
@@ -55,12 +103,13 @@ body {
 }
 
 .navegacion-principal a:hover {
-    background-color: var(--primario);
+    background-color: var(--primarioG);
     color: var(--negro);
 }
 
 @media (min-width: 480px) {
     /*Celular*/
+
 }
 
 @media (min-width: 768px) {
@@ -84,9 +133,52 @@ body {
     position: relative;
 }
 
+/* Imagenes */
+.presentation {
+    background-image: url(../img/placeholder.jpg);
+    height: 500px;
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: cover;
+}
+
 .picture-container {
-   position: absolute;
-   width: 100%;
-   height: 100%;
-   background-color: rgba(0, 0, 0, 0.5); 
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.picture-container h2,
+.picture-container p {
+    color: var(--blanco);
+}
+
+@media (min-width: 768px) {
+    .contactar-boton {
+        width: auto;
+    }
+}
+
+.about-me {
+    display: flex;
+    flex-direction: row;
+}
+
+/* Servicios */
+@media (min-width: 768px) {
+   .servicios{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+} 
+}
+
+.aboutme-grid{
+    display: grid;
+    grid-template-columns: 2fr 1fr;
 }
