--- a/FirstProject/css/styles.css
+++ b/FirstProject/css/styles.css
@@ -29,6 +29,11 @@ body {
     background-image: linear-gradient(to top, #DFE9F3 0%, var(--blanco) 100%);
 }
 
+.fondo-contacto {
+    background-image: radial-gradient(ellipse at bottom, var(--secundario) 0%, var(--negro) 100%);
+    color: white;
+}
+
 h1 {
     font-size: 3.8rem;
 }
@@ -52,6 +57,14 @@ h3 {
     margin: 0 auto;
 }
 
+.contenedor-contacto {
+    max-width: 40rem;
+    margin: 10rem auto;
+    background-color: transparent;
+    border: 1px solid #e3e3e3;
+    border-radius: 4px;
+}
+
 .sombra {
     -webkit-box-shadow: 0px 5px 15px 0px rgba(82, 82, 82, 0.55);
     -moz-box-shadow: 0px 5px 15px 0px rgba(82, 82, 82, 0.55);
@@ -70,8 +83,9 @@ h3 {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: bold;
-    width: 90%;
+    /* width: 90%; */
     text-align: center;
+    min-width: 15rem;
 }
 
 .contactar-boton:hover {
@@ -136,7 +150,7 @@ h3 {
 /* Imagenes */
 .presentation {
     background-image: url(../img/placeholder.jpg);
-    height: 500px;
+    height: 100%;
     background-repeat: no-repeat;
     position: relative;
     background-size: cover;
@@ -172,13 +186,22 @@ h3 {
 
 /* Servicios */
 @media (min-width: 768px) {
-   .servicios{
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-} 
+    .servicios {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
 
-.aboutme-grid{
+.aboutme-grid {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1.5fr 1fr;
+    background-color: var(--blanco);
+}
+
+.contact-display {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 60rem;
 }
